--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </header>
         <main>
             <section class="hero dark">
-                <div class="container">
+                <div class="container centered">
                     <h1 class="hero_headling">
                         Ефективні рішення для вашого бізнесу
                     </h1>
