update index.html, portfolio.html and styles.css

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             </div>
         </header>
         <main>
-            <section class="hero dark">
-                <div class="container centered">
+            <section class="section hero">
+                <div class="container">
                     <h1 class="hero_headling">
                         Ефективні рішення для вашого бізнесу
                     </h1>
@@ -76,7 +76,7 @@
                     </button>
                 </div>
             </section>
-            <section id="features" class="features light">
+            <section id="features" class="section features">
                 <div class="container">
                     <h2 class="headling visually-hidden">Наші особливості</h2>
                     <ul class="grid list">
@@ -111,7 +111,7 @@
                     </ul>
                 </div>
             </section>
-            <section id="specialization" class="specialization light">
+            <section id="specialization" class="section specialization">
                 <div class="container">
                     <h2 class="headling">Чим ми займаємося</h2>
                     <ul class="gallery list">
@@ -142,7 +142,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="our-team grey">
+            <section class="section our-team">
                 <div class="container">
                     <h2 class="headling">Наша команда</h2>
                     <ul class="cards list">
