--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
             </div>
         </header>
         <main>
-            <section id="Portfolio" class="portfolio">
+            <section id="Portfolio" class="section portfolio">
                 <div class="container">
                     <h1 class="visually-hidden">Портфоліо проектів</h1>
                     <ul class="filter_pannel list">
