Updated index.html, portfolio.html, styles.css according to mentor comments

--- a/portfolio.html
+++ b/portfolio.html
@@ -104,8 +104,10 @@
                                 class="portfolio-list__photo"
                                 width="270"
                             />
-                            <h2 class="portfolio-list__headling">Технокряк</h2>
-                            <p class="portfolio-list__text">Веб-сайт</p>
+                            <div class="wrapper">
+                                <h2 class="portfolio-list__headling">Технокряк</h2>
+                                <p class="portfolio-list__text">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="portfolio-list__item">
                             <img
@@ -114,10 +116,12 @@
                                 class="portfolio-list__photo"
                                 width="270"
                             />
-                            <h2 class="portfolio-list__headling">
-                                Постер New Orlean vs Golden Star
-                            </h2>
-                            <p class="portfolio-list__text">Дизайн</p>
+                            <div class="wrapper">
+                                <h2 class="portfolio-list__headling">
+                                    Постер New Orlean vs Golden Star
+                                </h2>
+                                <p class="portfolio-list__text">Дизайн</p>
+                            </div>
                         </li>
                         <li class="portfolio-list__item">
                             <img
@@ -126,10 +130,12 @@
                                 class="portfolio-list__photo"
                                 width="270"
                             />
-                            <h2 class="portfolio-list__headling">
-                                Ресторан Seafood
-                            </h2>
-                            <p class="portfolio-list__text">Додаток</p>
+                            <div class="wrapper">
+                                <h2 class="portfolio-list__headling">
+                                    Ресторан Seafood
+                                </h2>
+                                <p class="portfolio-list__text">Додаток</p>
+                            </div>
                         </li>
                         <li class="portfolio-list__item">
                             <img
@@ -138,10 +144,12 @@
                                 class="portfolio-list__photo"
                                 width="270"
                             />
-                            <h2 class="portfolio-list__headling">
-                                Проєкт Prime
-                            </h2>
-                            <p class="portfolio-list__text">Маркетинг</p>
+                            <div class="wrapper">
+                                <h2 class="portfolio-list__headling">
+                                    Проєкт Prime
+                                </h2>
+                                <p class="portfolio-list__text">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="portfolio-list__item">
                             <img
@@ -150,10 +158,12 @@
                                 class="portfolio-list__photo"
                                 width="270"
                             />
-                            <h2 class="portfolio-list__headling">
-                                Проєкт Boxes
-                            </h2>
-                            <p class="portfolio-list__text">Додаток</p>
+                            <div class="wrapper">
+                                <h2 class="portfolio-list__headling">
+                                    Проєкт Boxes
+                                </h2>
+                                <p class="portfolio-list__text">Додаток</p>
+                            </div>
                         </li>
                         <li class="portfolio-list__item">
                             <img
@@ -162,10 +172,12 @@
                                 class="portfolio-list__photo"
                                 width="270"
                             />
-                            <h2 class="portfolio-list__headling">
-                                Inspiration has no Borders
-                            </h2>
-                            <p class="portfolio-list__text">Веб-сайт</p>
+                            <div class="wrapper">
+                                <h2 class="portfolio-list__headling">
+                                    Inspiration has no Borders
+                                </h2>
+                                <p class="portfolio-list__text">Веб-сайт</p>
+                            </div>
                         </li>
                         <li class="portfolio-list__item">
                             <img
@@ -174,10 +186,12 @@
                                 class="portfolio-list__photo"
                                 width="270"
                             />
-                            <h2 class="portfolio-list__headling">
-                                Видання Limited Edition
-                            </h2>
-                            <p class="portfolio-list__text">Дизайн</p>
+                            <div class="wrapper">
+                                <h2 class="portfolio-list__headling">
+                                    Видання Limited Edition
+                                </h2>
+                                <p class="portfolio-list__text">Дизайн</p>
+                            </div>
                         </li>
                         <li class="portfolio-list__item">
                             <img
@@ -186,8 +200,10 @@
                                 class="portfolio-list__photo"
                                 width="270"
                             />
-                            <h2 class="portfolio-list__headling">Проєкт LAB</h2>
-                            <p class="portfolio-list__text">Маркетинг</p>
+                            <div class="wrapper">
+                                <h2 class="portfolio-list__headling">Проєкт LAB</h2>
+                                <p class="portfolio-list__text">Маркетинг</p>
+                            </div>
                         </li>
                         <li class="portfolio-list__item">
                             <img
@@ -196,10 +212,12 @@
                                 class="portfolio-list__photo"
                                 width="270"
                             />
-                            <h2 class="portfolio-list__headling">
-                                Growing Business
-                            </h2>
-                            <p class="portfolio-list__text">Додаток</p>
+                            <div class="wrapper">
+                                <h2 class="portfolio-list__headling">
+                                    Growing Business
+                                </h2>
+                                <p class="portfolio-list__text">Додаток</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
