--- a/portfolio.html
+++ b/portfolio.html
@@ -76,22 +76,22 @@
                             </button>
                         </li>
                         <li class="filter_item">
-                            <button class="button secondary-btn"" type="button">
+                            <button class="button secondary-btn" type="button">
                                 Веб-сайти
                             </button>
                         </li>
                         <li class="filter_item">
-                            <button class="button secondary-btn"" type="button">
+                            <button class="button secondary-btn" type="button">
                                 Додатки
                             </button>
                         </li>
                         <li class="filter_item">
-                            <button class="button secondary-btn"" type="button">
+                            <button class="button secondary-btn" type="button">
                                 Дизайн
                             </button>
                         </li>
                         <li class="filter_item">
-                            <button class="button secondary-btn"" type="button">
+                            <button class="button secondary-btn" type="button">
                                 Маркетинг
                             </button>
                         </li>
@@ -105,7 +105,9 @@
                                 width="270"
                             />
                             <div class="wrapper">
-                                <h2 class="portfolio-list__headling">Технокряк</h2>
+                                <h2 class="portfolio-list__headling">
+                                    Технокряк
+                                </h2>
                                 <p class="portfolio-list__text">Веб-сайт</p>
                             </div>
                         </li>
@@ -201,7 +203,9 @@
                                 width="270"
                             />
                             <div class="wrapper">
-                                <h2 class="portfolio-list__headling">Проєкт LAB</h2>
+                                <h2 class="portfolio-list__headling">
+                                    Проєкт LAB
+                                </h2>
                                 <p class="portfolio-list__text">Маркетинг</p>
                             </div>
                         </li>
